--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <div class="row">
             <div class="eight columns">
               <h5>Enter bill string</h5>
-              <textarea name="name" rows="20" cols="40" class="billString" class="billString" ></textarea>
-              <button class="button-primary calculateBtn" on type="button" name="button">Calculate</button>
+              <textarea name="name" rows="20" cols="40" class="billString" ></textarea>
+              <button class="button-primary calculateBtn" type="button" name="button">Calculate</button>
             </div>
             <div class="four columns">
               <strong>Total amount:</strong>
@@ -83,6 +83,7 @@
 
           <hr>
 
+           <!-- billTypeText addToBillBtn -->
           <div class="row">
             <div class="six columns">
 
@@ -95,15 +96,15 @@
               <table>
                 <tr>
                   <td>Call total</td>
-                  <td>R<span class="callTotalOne">27.50</span></td>
+                  <td>R<span class="callTotalOne">0.00</span></td>
                 </tr>
                 <tr>
                   <td>SMS total</td>
-                  <td>R<span class="smsTotalOne">13.75</span></td>
+                  <td>R<span class="smsTotalOne">0.00</span></td>
                 </tr>
                 <tr>
                   <td>Total</td>
-                  <td class="red">R<span class="totalOne">41.25</span></td>
+                  <td class="red">R<span class="totalOne">0.00</span></td>
                 </tr>
               </table>
             </div>
@@ -133,6 +134,7 @@
 
           <hr>
 
+            <!-- billItemTypeRadio radioBillAddBtn -->
           <div class="row">
             <div class="six columns">
               <h5>Bill type</h5>
@@ -151,15 +153,15 @@
                   <table>
                     <tr>
                       <td>Call total</td>
-                      <td>R<span class="callTotalTwo">34.50</span></td>
+                      <td>R<span class="callTotalTwo">0.00</span></td>
                     </tr>
                     <tr>
                       <td>SMS total</td>
-                      <td>R<span class="smsTotalTwo">3.00</span></td>
+                      <td>R<span class="smsTotalTwo">0.00</span></td>
                     </tr>
                     <tr >
                       <td>Total</td>
-                      <td class="orange" >R<span class="totalTwo">37.50</span></td>
+                      <td class="orange" >R<span class="totalTwo">0.00</span></td>
                     </tr>
                   </table>
             </div>
@@ -181,6 +183,7 @@
 
           <hr>
 
+          <!-- bill with settings -->
           <div class="row">
 
             <div class="six columns">
