--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <input type="radio" name="billItemTypeWithSettings" class="billItemTypeWithSettings" value = "sms">
                 <span class="label-body" >SMS</span>
               </label>
-              <button class="button-primary addBillBtn" type="button" name="button">Add</button>
+              <button class="button-primary addTheBillBtn" type="button" name="button">Add</button>
 
               <h5>Totals</h5>
                   <table>
